force-app/main/default/objects/Utilization_Review__c/Utilization_Review__c.object-meta.xml
<CustomObject>
    <label>Utilization Review</label>
    <nameField>
        <displayFormat>UR-{0000}</displayFormat>
        <label>Utilization Review Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Utilization Review</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>