force-app/main/default/objects/Utilization_Review__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Utilization Review</relationshipLabel>
    <relationshipName>Utilization_Review</relationshipName>
    <type>Lookup</type>
</CustomField>