force-app/main/default/objects/Utilization_Review__c/fields/Approved_LOC__c.field-meta.xml
<CustomField>
    <fullName>Approved_LOC__c</fullName>
    <label>Approved LOC</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Residential</fullName>
            </value>
            <value>
                <fullName>Detox</fullName>
            </value>
            <value>
                <fullName>In House</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>