force-app/main/default/objects/Utilization_Review__c/fields/Approved_Number_of_Sessions__c.field-meta.xml
<CustomField>
    <fullName>Approved_Number_of_Sessions__c</fullName>
    <label>Approved Number of Sessions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>