force-app/main/default/objects/Utilization_Review__c/fields/Authorization_Number__c.field-meta.xml
<CustomField>
    <fullName>Authorization_Number__c</fullName>
    <label>Authorization Number</label>
    <length>200</length>
    <type>Text</type>
</CustomField>