force-app/main/default/objects/Utilization_Review__c/fields/Created_Date_Date_Only__c.field-meta.xml
<CustomField>
    <fullName>Created_Date_Date_Only__c</fullName>
    <formula>DATEVALUE( CreatedDate )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created Date (Date Only)</label>
    <type>Date</type>
</CustomField>