force-app/main/default/objects/Utilization_Review__c/fields/Date_Time_of_Review__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_of_Review__c</fullName>
    <label>Date/Time of Review</label>
    <type>DateTime</type>
</CustomField>