force-app/main/default/objects/Utilization_Review__c/fields/Discharge__c.field-meta.xml
<CustomField>
    <fullName>Discharge__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Discharge</label>
    <type>Checkbox</type>
</CustomField>