force-app/main/default/objects/Utilization_Review__c/fields/Next_Review_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Review_Date__c</fullName>
    <formula>CreatedDate +  Approved_Number_of_Days__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Next Review Date</label>
    <type>Date</type>
</CustomField>