force-app/main/default/objects/Utilization_Review__c/fields/Sessions_Available__c.field-meta.xml
<CustomField>
    <fullName>Sessions_Available__c</fullName>
    <label>Sessions Available</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>