force-app/main/default/objects/Utilization_Review__c/fields/Sessions_Completed__c.field-meta.xml
<CustomField>
    <fullName>Sessions_Completed__c</fullName>
    <label>Sessions Completed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>